--- a/packages/blip/package.json
+++ b/packages/blip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blip",
-  "version": "3.4.1",
+  "version": "3.5.0-rc1",
   "private": true,
   "description": "Blip is a web app for type 1 diabetes (T1D) built on top of the [Tidepool](http://tidepool.org/) platform.",
   "repository": {
