--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blip-dev-server",
-  "version": "3.4.1",
+  "version": "3.5.0-rc1",
   "private": true,
   "scripts": {
     "server": "node server",
