correct file name everywhere in blip directory hell

--- a/cloudfront-dist/deployment/docker.template.env
+++ b/cloudfront-dist/deployment/docker.template.env
@@ -25,12 +25,12 @@ STONLY_WID=disabled
 SUPPORT_WEB_ADDRESS=https://yourloops.zendesk.com/hc/requests/new
 CONTACT_SUPPORT_WEB_URL=https://yourloops.zendesk.com/hc/requests/new
 COOKIE_BANNER_CLIENT_ID=disabled
-YLPZ_RA_LAD_001_FR_REV=3
-YLPZ_RA_LAD_001_EN_REV=3
-YLPZ_RA_LAD_001_IT_REV=0
-YLPZ_RA_LAD_001_NL_REV=0
-YLPZ_RA_LAD_001_ES_REV=0
-YLPZ_RA_LAD_001_DE_REV=0
+YLPZ_RA_LAD_FR='intended-use.fr'
+YLPZ_RA_LAD_EN='intended-use.en'
+YLPZ_RA_LAD_NL='intended-use.nl'
+YLPZ_RA_LAD_IT='intended-use.it'
+YLPZ_RA_LAD_ES='intended-use.es'
+YLPZ_RA_LAD_DE='intended-use.de'
 IDLE_TIMEOUT_MS=1800000
 BANNER_ENABLED=false
 BANNER_LABEL_EN=""
