--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidepool-viz",
-  "version": "3.6.0",
+  "version": "3.6.0-rc2",
   "description": "Tidepool data visualization for diabetes device data.",
   "keywords": [
     "data visualization"
