--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blip-dev-server",
-  "version": "3.6.0",
+  "version": "3.6.0-rc2",
   "private": true,
   "scripts": {
     "server": "node server",
