--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,13 @@
     "npm": ">=7.x"
   },
   "dependencies": {
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "express": "4.19.2",
+    "axios": "^1.11.0",
+    "body-parser": "^1.20.3",
+    "compression": "^1.8.1",
+    "express": "^4.21.2",
     "handlebars": "^4.7.6",
     "helmet": "^3.22.0",
     "lodash": "^4.17.21",
-    "morgan": "1.10.0",
-    "request": "^2.88.2"
+    "morgan": "^1.10.1"
   }
 }
