--- a/package.json
+++ b/package.json
@@ -82,10 +82,9 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/blob-stream": "^0.1.31",
     "@types/chai": "^4.3.9",
+    "@types/d3": "^7.4.3",
     "@types/d3-array": "^3.2.1",
     "@types/d3-format": "^3.0.3",
-    "@types/d3-scale": "^4.0.6",
-    "@types/d3-time-format": "^4.0.3",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.200",
     "@types/mini-css-extract-plugin": "^2.3.0",
@@ -106,7 +105,6 @@
     "copyfiles": "^2.4.1",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
-    "d3-time-format": "4.1.0",
     "eslint": "^8.52.0",
     "eslint-plugin-jest": "^27.4.3",
     "eslint-plugin-jsx-a11y": "^6.8.0",
