--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ concurrency:
 
 env:
   GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+  node-version: 24
 
 jobs:
   lint:
@@ -20,12 +21,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -44,12 +45,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -65,12 +66,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -87,12 +88,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -108,12 +109,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -130,12 +131,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
       - name: Install npm dependencies
         run: |
           npm ci
@@ -151,12 +152,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -173,12 +174,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -195,12 +196,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -217,12 +218,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: |
@@ -239,12 +240,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: npm ci
@@ -342,10 +343,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ env.node-version }}
 
       - name: Install npm dependencies
         run: npm ci
