--- a/.github/workflows/publish_on_request.yml
+++ b/.github/workflows/publish_on_request.yml
@@ -7,6 +7,7 @@ on:
 env:
   GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
   PR_NUMBER: ${{ github.event.issue.number }}
+  node-version: 24
 
 jobs:
   build:
@@ -34,12 +35,12 @@ jobs:
         with:
           ref: ${{ steps.comment-branch.outputs.head_ref }}
 
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v3
         with:
           cache: 'npm'
           cache-dependency-path: package-lock.json
-          node-version: 18
+          node-version: ${{ env.node-version }}
       - name: Install npm dependencies
         run: npm ci
 
