--- a/cloudfront-dist/deployment/docker.template.env
+++ b/cloudfront-dist/deployment/docker.template.env
@@ -32,10 +32,4 @@ YLPZ_RA_LAD_IT='intended-use.it'
 YLPZ_RA_LAD_ES='intended-use.es'
 YLPZ_RA_LAD_DE='intended-use.de'
 IDLE_TIMEOUT_MS=1800000
-BANNER_ENABLED=false
-BANNER_LABEL_EN=""
-BANNER_LABEL_ES=""
-BANNER_LABEL_DE=""
-BANNER_LABEL_FR=""
-BANNER_LABEL_IT=""
-BANNER_LABEL_NL=""
+EATING_SHORTLY_ENABLED=true
