--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yourloops",
-  "version": "3.8.0-beta",
+  "version": "3.8.0-rc0",
   "private": true,
   "description": "Blip is a web app for type 1 diabetes (T1D) built on top of the [Tidepool](http://tidepool.org/) platform.",
   "repository": {
