--- a/cloudfront-dist/deployment/package.json
+++ b/cloudfront-dist/deployment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "staticwebsite-cdk",
-  "version": "3.8.0-rc2",
+  "version": "3.8.0",
   "bin": {
     "staticwebsite-cdk": "bin/staticwebsite-cdk.js"
   },
