--- a/packages/dumb/package.json
+++ b/packages/dumb/package.json
@@ -41,6 +41,7 @@
     "url": "https://github.com/mdblp/blip/issues"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.5.0",
     "react-resize-detector": "^8.0.4"
   }
 }
