--- a/packages/tideline/package.json
+++ b/packages/tideline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tideline",
-  "version": "3.8.0",
+  "version": "3.9.0-beta",
   "description": "Tidepool's timeline data visualization",
   "repository": {
     "type": "git",
