--- a/packages/yourloops/package.json
+++ b/packages/yourloops/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yourloops",
-  "version": "3.8.0",
+  "version": "3.9.0-beta",
   "private": true,
   "description": "Blip is a web app for type 1 diabetes (T1D).",
   "repository": {
