--- a/packages/dumb/package.json
+++ b/packages/dumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dumb",
-  "version": "3.9.0-beta",
+  "version": "3.8.0",
   "description": "Yourloops package for exposing dumb components",
   "author": {
     "name": "Diabeloop",
