--- a/packages/medical-domain/package.json
+++ b/packages/medical-domain/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medical-domain",
-  "version": "3.9.0-beta",
+  "version": "3.8.0",
   "description": "Yourloops package for processing medical data",
   "author": {
     "name": "Diabeloop",
