--- a/packages/blip/package.json
+++ b/packages/blip/package.json
@@ -21,6 +21,7 @@
   "types": "app/index.d.ts",
   "dependencies": {
     "classnames": "^2.3.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-resize-detector": "^8.0.4"
   }
 }
