--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,16 +275,22 @@ jobs:
         uses: actions/download-artifact@v4
 
       - name: Get yourloops version from changelog
-        uses: addnab/docker-run-action@v3
-        with:
-          username: ${{ secrets.NEXUS_USERNAME }}
-          password: ${{ secrets.NEXUS_PASSWORD }}
-          registry: ${{ secrets.REGISTRY }}
-          options: -v ${{ github.workspace }}:/dblprm/blip:rw --user 0:0
-          image: docker.ci.diabeloop.eu/ci-toolbox:latest
-          run: |
-            cd blip
-            echo "semver=$(release-helper get-version)" > version.env
+        env:
+          REGISTRY: ${{ secrets.REGISTRY }}
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+        run: |
+          docker login "$REGISTRY" \
+            -u "$NEXUS_USERNAME" \
+            -p "$NEXUS_PASSWORD"
+
+          docker run --rm \
+            -v ${{ github.workspace }}:/dblprm/blip/:rw --user 0:0 \
+            docker.ci.diabeloop.eu/ci-toolbox:latest \
+            sh -c "
+              cd blip
+              echo \"semver=\$(release-helper get-version)\" > version.env
+            "
 
       - name: Read env file
         id: changelog-version
